# portfolio

./: .gitignore  README.md  build_local.sh  db.sqlite3  pyproject.toml
.github/workflows/: deploy.yml
portfolio/: settings.py  urls.py
projects/: admin.py  context_processors.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_profile.py  0003_profile_favicon_profile_logo.py  0004_experience.py  0005_alter_experience_description.py  0006_project_association_project_role_project_time_frame_and_more.py  0007_education.py
projects/templatetags/: markdown_extras.py
static/css/: style.css
templates/: base.html
templates/projects/: home.html  project_detail.html
