[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "pillow>=12.1.0",
    "markdown>=3.5",
    "gunicorn>=25.0.3",
    "psycopg2-binary>=2.9.11",
    "whitenoise>=6.11.0",
    "django-distill>=3.2.7",
]
